# pmanga

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  PLAN.md  build.rs  package-lock.json  package.json  playwright.config.js  tailwind.css  tankobon_db.csv
.github/workflows/: ci.yaml  deploy.yaml  e2e-trigger.yaml  e2e.yaml
assets/: main.css  pmanga_bridge.js  tailwind.css  tankobon_db.csv
pmanga-proxy/: Cargo.toml
pmanga-proxy/src/: main.rs
scripts/: sc.py
src/: assets.rs  main.rs  routes.rs
src/bridge/: js.rs  mod.rs  weebcentral.rs
src/components/: confirm_dialog.rs  import_source_dialog.rs  importer.rs  manga_card.rs  mod.rs  progress_bar.rs  weebcentral_importer.rs
src/input/: config.rs  gamepad.rs  mod.rs
src/pages/: library.rs  mod.rs  padding.rs  reader.rs  settings.rs  shelf.rs
src/pages/reader/: mod.rs  navigation.rs  options_modal.rs  overlay.rs  paged_reader.rs  reader_config.rs  scroll_reader.rs  viewport.rs  zoom.rs
src/storage/: db.rs  mod.rs  models.rs  progress.rs  sync.rs  tankobon.rs
tests/e2e/: library.spec.js  paged-reader.spec.js  scroll-reader.spec.js  shelf.spec.js  zoom.spec.js
tests/e2e/helpers/: seed.js
