[package]
name = "pmanga"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["web", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Storage",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbIndex",
    "IdbRequest",
    "IdbKeyRange",
    "IdbCursorWithValue",
    "IdbCursor",
    "IdbVersionChangeEvent",
    "IdbObjectStoreParameters",
    "IdbIndexParameters",
    "IdbTransactionMode",
    "DomException",
    "Event",
    "EventTarget",
    "FileList",
    "File",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "console",
] }
gloo-utils = "0.2"
futures-channel = "0.3"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
